<resources>
    <string name="app_name">AppFirebaseLogin</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="go_back">GO BACK</string>
    <string name="update_info">UPDATE INFO</string>
    <string name="delete_user">DELETE USER</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
</resources>