<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.AuthActivity" >

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_back"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="288dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:textStyle="italic"
                    android:text="@string/email"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="286dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/age"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="286dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/age" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <Button
                    android:id="@+id/buttonUpdate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_info" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5" />

                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_user" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>